feat: implement stock management
